--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
 	<li>цветущий</li>
 	<li>плодоносит</li>
 	</li>
-	<a href=https://veronikakarpenuk.github.io/1234/>другие проекты на Github</a>
+	<a href=https://veronikakarpenuk.github.io/1234u/>другие проекты на Github</a>
 	</body>
 </html>
