--- a/index.html
+++ b/index.html
@@ -1,22 +1,55 @@
-<!doctype html>
+﻿<!doctype html>
 <html>
-  <head>
-   <meta charset='utf-8'>
-    <title>мое любимое растение</title>
-  </head>
-  <body>
-  <center>
-    <h1>Плющ</h1>
-	<img src="plushkomnatniy.jpg" alt="Картинка не отображается">
-	<br>
-	<a href="https://ru.wikipedia.org/wiki/%D0%9F%D0%BB%D1%8E%D1%89"> плющ в Википедии</a>
-	</center>
-	<p> Плющ – род растений семейства <b>Аралиевые</b></p>
-	<ul>
-	<li>кустарник</li>
-	<li>цветущий</li>
-	<li>плодоносит</li>
-	</li>
-	<a href=https://veronikakarpenuk.github.io/1234u/>другие проекты на Github</a>
-	</body>
+<head>
+<meta charset="utf-8">
+<title>Моя страница</title>
+<style>
+body {
+	background: #000 url(7505642_f1024.jpg); 
+	background-attachment: fixed; 
+        background-size: 100%;      
+}
+</style>
+</head>
+
+<body>
+<center>
+<h1>Моя страничка</h1>
+<h2><strong>Карпенюк Вероника Витальевна</strong> </h2>
+<img src="me.jpg" width=20% alt="картинка не загружается ">
+</center>
+<font size=5>
+<p><b>Место учёбы:</b> НИУ ВШЭ, Факультет гуманитарных наук, Школа филологии 
+<p><b>Научные интересы:</b> европейская и американская литература 20 века, русская проза 19 века, художественный перевод
+<p><b>Немного о себе:</b> люблю музыку, психологические триллеры, американское кино 90х и спать)
+<center>
+<img src="film.jpg" width=50%  alt="картинка не загружается">
+</center>
+</ul>
+
+<center>
+<h3>Как современные технологии могут помочь филологу?</h3>
+</center>
+Современные технологии существенно облегчают работу филологов.Они позволяют хранить и находить необходимую научную и художественную литературу,проводить анализ большого колличества текстов, обрабатывать данные. Кроме того, современные технологии помогают создавать и ориентироваться в корпусах текстов.
+
+<center>
+<h3>Анализ достоинств и недостатков сайтa<a href="https://ficbook.net/"> Книга Фанфиков</a></h3>
+</center>
+<p><b><i>Достоинства:</i></b></p>
+<ol> <li>простой интерфейс</li>
+<li>целых две строки поиска</li>
+<li>возможность фильтровать работы при поиске</li>
+<li>возможность ночного режима</li>
+<li>просто красивый</li>
+<p><center>
+<img width=60%  src="ficbook1.jpg" alt="картинка не загружается">
+<p><img width=60% src="ficbook2.jpg" alt="картинка не загружается">
+</center>
+
+</ol>
+<p><b><i>Недостатки:</i></b></p>
+<ol> <li>иконки с ссылками на странички самых популярных фандомов немного громоздки и отвлекают (впрочем, их можно скрыть)</li>
+</ol>
+<a href=https://github.com/veronikakarpenuk>моя страничка на Github</a>
+</body>
 </html>
